# CMake

./: README.md
source/: CMakeLists.txt
source/src/: main.cpp
